--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
       </div>
       <div class="main-nav">
         <ul>
-          <li><a href="index.html" class="selected">Home</a></li>
-          <li><a href="activities.html">Activities</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="activities.html" class="selected">Activities</a></li>
           <li><a href="contact.html">Contact us!</a></li>
         </ul>
 
