--- a/things-to-do.html
+++ b/things-to-do.html
@@ -13,9 +13,9 @@
       </div>
       <div class="main-nav">
         <ul>
-          <li><a href="index.html" class="selected">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="activities.html">Activities</a></li>
-          <li><a href="contact.html">Contact us!</a></li>
+          <li><a href="contact.html" class="selected">Contact us!</a></li>
         </ul>
 
       </div>
