--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
         <h1>Vacation Time is the Best!</h1>
         <p>A site for those who wish they were vacationing so hard right now.  Vacation to the max!</p>
       </div>
-      <div class="main-nav">
-        <ul>
-          <li><a href="index.html" class="selected">Home</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="contact.html">Contact us!</a></li>
-        </ul>
+      <div class="container">
+        <nav class="navbar navbar-light bg-faded">
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a href="index.html" class="selected nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="activities.html" class="nav-link">Activities</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact us!</a>
+            </li>
+          </ul>
 
+        </nav>
       </div>
-
 
     </div>
   </body>
