--- a/activities.html
+++ b/activities.html
@@ -3,13 +3,13 @@
   <head>
     <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-    <title>Contact!</title>
+    <title>Activity!</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Contact Us!</h1>
-        <p>Holla at me, dog!</p>
+        <h1>Actvities!</h1>
+        <p>Doing stuff is the best!</p>
       </div>
       <nav class="navbar navbar-default bg-faded">
         <ul class="nav navbar-nav">
