--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
-        <h1>Vacation Time is the Best!</h1>
-        <p>A site for those who wish they were vacationing so hard right now.  Vacation to the max!</p>
-      </div>
       <nav class="navbar navbar-default bg-faded">
         <ul class="nav navbar-nav">
           <li class="nav-item">
@@ -24,6 +20,14 @@
           </li>
         </ul>
       </nav>
+      <div class="jumbotron">
+        <h1>Vacation Time is the Best!</h1>
+        <p>A site for those who wish they were vacationing so hard right now.  Vacation to the max!</p>
+      </div>
+      <blockquote class="bg-info">
+        <p>This place is so awesome the fish jumped into the boat and cooked itself!</p>
+        <footer>Said the guy with an empty bottle of Basil Hayden in his boat.</footer>
+      </blockquote>
 
 
     </div>
